<resources>
    <string name="app_name">Shamo</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_and_happy_shoping">Register and Happy Shoping</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="your_username">Your Username</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="go_to_cart_page">Go to Cart Page</string>
    <string name="home_toolbar_title">Hello, %s</string>
    <string name="popular_products">Popular Products</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="for_you">For You</string>
    <string name="ops_no_message_yet">Ops no message yet?</string>
    <string name="you_have_never_done_a_transaction">You have never done a transaction</string>
    <string name="message_support">Message Support</string>
    <string name="empty_state_icon">Empty State Icon</string>
    <string name="back_button">Back Button</string>
    <string name="type_message">Type Message…</string>
    <string name="clear_product_in_message_button">Clear Product in Message button</string>
    <string name="sending_status">Sending Status</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="favorite_shoes">Favorite Shoes</string>
    <string name="you_don_t_have_dream_shoes">You don\'t have dream shoes?</string>
    <string name="let_s_find_your_favorite_shoes">Let\'s find your favorite shoes</string>
    <string name="explore_store">Explore Store</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="logout_button">Logout Button</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_orders">Your Orders</string>
    <string name="help">Help</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="term_of_service">Term Of Service</string>
    <string name="rate_app">Rate App</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="search">Search…</string>
    <string name="your_cart">Your Cart</string>
    <string name="ops_your_cart_is_empty">Ops! Your Cart is Empty</string>
    <string name="increase_quantity_button">Increase Quantity Button</string>
    <string name="decrease_quantity_button">Decrease Quantity Button</string>
    <string name="remove">Remove</string>
    <string name="subtotal">Subtotal</string>
    <string name="continue_to_checkout">Continue to Checkout</string>
    <string name="checkout_details">Checkout Details</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="list_items">List Items</string>
    <string name="address_details">Address Details</string>
    <string name="store_location">Store Location</string>
    <string name="your_address">Your Address</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="quantity">%d Items</string>
    <string name="free">Free</string>
    <string name="shamo_official_location">Shamo Official Location</string>
    <string name="customer_address">Jalan Jalan</string>
    <string name="cart_button">Cart Button</string>
    <string name="cart">Cart</string>
    <string name="gallery">Gallery</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="price_starts_from">Price starts from</string>
    <string name="description">Description</string>
    <string name="familiar_shoes">Familiar Shoes</string>
    <string name="read_less">Read Less</string>
    <string name="read_more">Read More</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
</resources>