<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_chats"
        android:icon="@drawable/ic_message"
        android:title="@string/chats"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_blank"
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>