<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".presentation.views.activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/FontSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="20sp" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/FontRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.textview.MaterialTextView
            style="@style/FontMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="70dp"
            android:text="@string/email_address" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/search_bar_bg"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/FontRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:hint="@string/your_email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/FontMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/FontRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/search_bar_bg"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"
                android:hint="@string/your_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/FontMedium"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="12dp" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/FontRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleSignIn"
            style="@style/FontMedium"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/darkGrey"
            android:text="@string/continue_with_google"
            android:textColor="@color/cardWhite"
            android:textSize="14sp"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="start"
            app:iconTint="@null"
            app:rippleColor="@color/grey" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnGoToSignUp"
            style="@style/FontRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/don_t_have_account_sign_up"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>
