<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.views.activities.EditProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_clear" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvToolbarTitle"
                style="@style/FontMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/edit_profile"
                android:textAlignment="center"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/btnSave"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/save"
                android:src="@drawable/ic_tick_purple" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <include
        android:id="@+id/horizontalLine"
        layout="@layout/appbar_horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/profile_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/full_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProfile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/darkGrey"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    style="@style/FontRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_full_name"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilFullName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/darkGrey"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    style="@style/FontRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_username"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/email_address"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilUsername" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/darkGrey"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/FontRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_email_address"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/darkGrey"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/FontRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_phone_number"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
